<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewWine" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <ImageView
		        android:id="@+id/winePicture"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_launcher"
		        android:clickable="true" />

		    <ImageButton
		        android:id="@+id/takePicture"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:src="@android:drawable/ic_menu_camera" />

		 </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
    
			<EditText
		        android:id="@+id/name"
		        android:hint="@string/name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ems="10"  />
		    <EditText
		        android:id="@+id/price"
		        android:hint	="@string/price"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ems="10"
		        android:inputType="numberDecimal" />
		   </LinearLayout>
	</LinearLayout> 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
		    <NumberPicker
		        android:id="@+id/ratingColor"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:labelFor="@+id/ratingColor"
		        android:text="@string/color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <NumberPicker
    		    android:id="@+id/ratingNose"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:orientation="vertical" />
            <TextView
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:labelFor="@+id/ratingNose"
        		android:text="@string/nose" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
		    <NumberPicker
		        android:id="@+id/ratingPalate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:labelFor="@+id/ratingPalate"
		        android:text="@string/palate" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
		    <NumberPicker
		        android:id="@+id/ratingOverall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" />
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:labelFor="@+id/ratingOverall"
		        android:text="@string/overall" />
        </LinearLayout>
    </LinearLayout>
    <Button
		android:id="@+id/addWine"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:text="@string/save" />
</LinearLayout>
